# aws-micro-services-python

./: .codespell-ignore.txt  .codespellrc  .gitignore  .pre-commit-config.yaml  .prettierrc.json  Makefile  README-DEVELOPMENT.md  README-FAST-API.md  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: main.yml
infra/: api-gateway.yaml  infra.yaml  layers.yaml  micro-infra.yaml  samconfig.toml  sqs-batch-processing.yaml  template.yaml
src/fast_api/: requirements.txt  setup.py
src/fast_api/fast_api/: app.py
src/fast_api/fast_api/dependencies/: aws_services.py  users.py
src/fast_api/fast_api/handlers/: exception_handler.py  http_exception_handler.py
src/fast_api/fast_api/middlewares/: correlation_id_middleware.py  logging_middleware.py
src/fast_api/fast_api/models/: message_model.py  users_model.py
src/fast_api/fast_api/routers/: users_router.py
src/libraries/micro_aws/: requirements.txt  setup.py
src/libraries/micro_aws/micro_aws/: base_handler.py  dynamodb_table.py  s3_bucket.py  sqs_queue.py
src/libraries/micro_core/: requirements.txt  setup.py
src/libraries/micro_core/micro_core/: logging_config.py  utils.py
src/micro_core/: requirements.txt  setup.py
src/micro_core/micro_core/: logging_config.py  utils.py
src/micro_core/micro_core/services/: dynamodb_table.py  s3_bucket.py  sqs_queue.py
src/powertools_hello_world/: setup.py
src/powertools_hello_world/powertools_hello_world/: app.py
src/services/fast_api/: setup.py
src/services/fast_api/fast_api/: app.py
src/services/fast_api/fast_api/dependencies/: users.py
src/services/fast_api/fast_api/routers/: users_router.py
src/services/fast_api_users/: setup.py
src/services/fast_api_users/fast_api_users/: app.py
src/services/powertools_hello_world/: setup.py
src/services/powertools_hello_world/powertools_hello_world/: app.py
src/services/simpler_fast_api/: setup.py
src/services/sqs_batch_processing/: requirements.txt  setup.py
src/services/sqs_users_processor/: setup.py
src/services/sqs_users_processor/sqs_users_processor/: app.py
src/simpler_fast_api/: setup.py
src/simpler_fast_api/simpler_fast_api/: app.py
src/sqs_batch_processing/: setup.py
src/sqs_batch_processing/sqs_batch_processing/: app.py
tests/: conftest.py  requirements.txt
tests/fast_api/: test_fast_api.py
tests/libraries/micro_aws/: test_dynamodb_table.py
tests/libraries/micro_core/: test_utils.py
tests/micro_core/: test_dynamodb_table.py
tests/power_tools_hello_world/: test_power_tools_hello_world.py
tests/services/fast_api/: test_fast_api.py
tests/services/fast_api_users/: test_fast_api_users.py
tests/services/powertools_hello_world/: test_power_tools_hello_world.py
tests/services/sqs_batch_processing/: test_sqs_batch_processing.py
tests/sqs_batch_processing/: test_sqs_batch_processing.py
(+6 files in other folders)
